--- a/index.html
+++ b/index.html
@@ -171,56 +171,7 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 
 			  <br><br>			  
 
-			  So what systems will we tear down? 
-			  Here are a few examples:
-			  <br>
-
-			  <ul>
-  <li> The autograd function of some simple neural networks, including baby LLMs (expert-written).</li>
-  <li> Various inner layers of neural networks (designed by stalwarts such as Karpathy).</li>
-  <li> Various lossy compressors and graph algorithm codes (written by pioneers in this area). </li>
-			  </ul>
-
-			  <br>
-			  <strong>
-				Here are some reference materials for learning about these topics; more will be given:
-				
-			  </strong>
-
-			  <ul>
-		<li> <a href = "https://github.com/damtharvey/reu2023">  A course </a> with embedded quizzes (and answers) by TM Harvey Dam, PhD student.
-
-		<li> <a href = "https://www.manning.com/books/build-a-large-language-model-from-scratch"> An inexpensive but very good book. </a>
-		  Its Jupyter notebooks are kept <a href="https://github.com/rasbt/LLMs-from-scratch"> here </a>
-
-		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/LC/"> The LC Compression Framework </a> from Texas State University.
-
-		<li> <a href = "https://github.com/damtharvey/pyblaz"> The PyBlaz Lossy Compressor </a> developed at the University of Utah.
-
-		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/abstracts.html#TOPC24">  The  Indigo-3 Graph Algorithm Benchmark Suite,</a>
-				allowing programmable bug injection.
-
-     	<li> <a href = "https://github.com/LLNL/GPU-FPX"> The GPU-FPX Framework </a> for floating-point exception detection.
-
-     	<li> <a href = "https://github.com/LLNL/FTTN"> A Feature-Targeted Testing Method  </a> for Tensor Cores.
-			
-			<br>
-  	  	    <br>
-
-	What shall we study?
-			  Here are a few examples:
-			  <br>
-
-
-			  <ul>
-  <li> How to do backprop through all sorts of layers including auto-encoders. </li>
-  <li> How forward and reverse-mode differentiation is realized. </li>
-  <li> How numerical precision is handled. </li>
-  <li> How threads and warps are organized. </li>
-  <li> How special units such as tensor-cores are brought in.</li>
-			  </ul>
-
-
+			  So what systems will we tear down?       See  <a href="#resources">Resources</a>
 
 	What bugs shall we understand to locate and mitigate?
 			  <br>
@@ -478,11 +429,58 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
         <section id="resources">
             <h2>Resources</h2>
             <p>
-			  Will be expanded. The link
-			  that follows will get organized
-			  over time (right now it is
-			  a dump of stuff).
-<a href="https://drive.google.com/drive/folders/1BGvDASE9u6Uts90XY450cCksxkqUGP5C?usp=sharing" target="_blank"> CURRENT RESOURCES</a>
+
+			  Here are a few examples:
+			  <br>
+
+			  <ul>
+  <li> The autograd function of some simple neural networks, including baby LLMs (expert-written).</li>
+  <li> Various inner layers of neural networks (designed by stalwarts such as Karpathy).</li>
+  <li> Various lossy compressors and graph algorithm codes (written by pioneers in this area). </li>
+			  </ul>
+
+			  <br>
+			  <strong>
+				Here are some reference materials for learning about these topics; more will be given:
+				
+			  </strong>
+
+			  <ul>
+		<li> <a href = "https://github.com/damtharvey/reu2023">  A course </a> with embedded quizzes (and answers) by TM Harvey Dam, PhD student.
+
+		<li> <a href = "https://www.manning.com/books/build-a-large-language-model-from-scratch"> An inexpensive but very good book. </a>
+		  Its Jupyter notebooks are kept <a href="https://github.com/rasbt/LLMs-from-scratch"> here </a>
+
+		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/LC/"> The LC Compression Framework </a> from Texas State University.
+
+		<li> <a href = "https://github.com/damtharvey/pyblaz"> The PyBlaz Lossy Compressor </a> developed at the University of Utah.
+
+		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/abstracts.html#TOPC24">  The  Indigo-3 Graph Algorithm Benchmark Suite,</a>
+				allowing programmable bug injection.
+
+     	<li> <a href = "https://github.com/LLNL/GPU-FPX"> The GPU-FPX Framework </a> for floating-point exception detection.
+
+     	<li> <a href = "https://github.com/LLNL/FTTN"> A Feature-Targeted Testing Method  </a> for Tensor Cores.
+			
+			<br>
+  	  	    <br>
+
+	What shall we study?
+			  Here are a few examples:
+			  <br>
+
+
+			  <ul>
+  <li> How to do backprop through all sorts of layers including auto-encoders. </li>
+  <li> How forward and reverse-mode differentiation is realized. </li>
+  <li> How numerical precision is handled. </li>
+  <li> How threads and warps are organized. </li>
+  <li> How special units such as tensor-cores are brought in.</li>
+			  </ul>
+
+
+Extra resources are being kept at 
+<a href="https://drive.google.com/drive/folders/1BGvDASE9u6Uts90XY450cCksxkqUGP5C?usp=sharing" target="_blank"> CURRENT RESOURCES</a>.
 			  </p>
         </section>
         <section id="contact">
