--- a/index.html
+++ b/index.html
@@ -171,6 +171,20 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 
 			  <br><br>
 
+ <strong> How to approach correctness? This is DALL.E's depiction following my prompts via ChatGPT :-)'
+			  </strong>			  
+<br>
+<div style="text-align: center;">
+  <img src="./hammer-looking-for-nail.webp" width="450" height="300">
+  <small> Don't be a hammer looking for any nail</small>
+  <img src="./nail-seeking-right-hammer.webp" width="450" height="300">
+  <small> ...but be nails seeking the right set of hammers</small>
+</div>
+
+			  <!---  -->
+
+
+
 			  <strong>
               What bugs shall we understand to locate and mitigate?
 			  So what systems will we tear down?       See  <a href="#resources">Resources</a>
@@ -222,18 +236,6 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 			  <br>
 			  
 			  <!---Role of Correctness -->
-<br>
-  			  <strong> How to approach correctness? This is DALL.E's opinion :-)'
-			  </strong>			  
-<br>
-<div style="text-align: center;">
-  <img src="./hammer-looking-for-nail.webp" width="450" height="300">
-  <small> Don't be a hammer looking for any nail</small>
-  <img src="./nail-seeking-right-hammer.webp" width="450" height="300">
-  <small> ...but be nails seeking the right set of hammers</small>
-</div>
-
-			  <!---  -->
 
 			  <br>
 
