--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 			</p>
         </section>
         <section id="schedule">
-            <h2>Class Schedule (quite tentative...firmed up by 1/6/25)</h2>
+            <h2>Class Schedule (quite tentative...many updates by 1/7/25)</h2>
             <p>
 			  The class meets Tue and Thu from 2pm to 3:20pm in WEB 1230.
 			  Here is a more specific schedule.
