--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
         <section id="about">
             <h2>About This Class</h2>
             <p>
-			  This class is aimed as a reality check: do we really
+			  The Canvas links to CS 4961 is 
+			  <a href="https://utah.instructure.com/courses/1017537"> HERE </a>
+			  and that for CS 6961 is
+              <a href="https://utah.instructure.com/courses/1021642"> HERE </a>.
+			  <strong> We will maintain only the latter, as the requirements are pretty much the same. </strong>
+			  The official syllabus page at the UofU is
+			  <a href="https://class-tools.app.utah.edu/syllabus/1254/14904/4961-6961-course-template.docx"> HERE. </a>
+			  It describes the grading scale, etc. (Basically: 20% for assignments; 30% for participation which
+			  includes attendance; and 50% for projects.)
+			  <br>
+			  This course
+			  is aimed as a reality check: do we really
 			  understand how today's AI and ML systems are built---upto
 			  and including the design of the underlying GPU codes?
 			  We hear stories of GPUs being the central currency of
