--- a/index.html
+++ b/index.html
@@ -463,10 +463,25 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 			  </strong>
 
 			  <ul>
-		<li> <a href = "https://github.com/damtharvey/reu2023">  A course </a> with embedded quizzes (and answers) by TM Harvey Dam, PhD student.
+				<li> <a href = "https://github.com/damtharvey/reu2023">  A course </a> with embedded quizzes (and answers) by TM Harvey Dam, PhD student.
+
+		  
 
 		<li> <a href = "https://www.manning.com/books/build-a-large-language-model-from-scratch"> An inexpensive but very good book. </a>
-		  Its Jupyter notebooks are kept <a href="https://github.com/rasbt/LLMs-from-scratch"> here </a>
+		  Its Jupyter notebooks <a href="https://github.com/rasbt/LLMs-from-scratch"> great! </a>
+
+<li> 
+ <a href="https://youtu.be/KJtZARuO3JY?si=u8iJez3kYLEs_RlE"> Grant Sanderson's LLM video (the best - 3Blue1Brown) </a>		  
+
+<li> Karpathy's videos		  <a href="https://www.youtube.com/watch?v=kCc8FmEb1nY&t=2s"> MicroGrad,</a>
+  <a href="https://www.youtube.com/watch?v=kCc8FmEb1nY&t=2s"> GPT-2 from scratch,</a>
+   <a href="https://youtu.be/l8pRSuU81PU?si=K6fghCn6VDkHelpZ"> GPT2 Repro,</a>
+   and (at least)
+   <a href="https://www.youtube.com/watch?v=BmdOt6A6tHM&t=85s"> LLM.c </a>
+
+ <li>
+  <a href="https://www.youtube.com/watch?v=Yt1A-vaWTck?"> Tensor Cores (also see blog)</a>
+		  
 
 		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/LC/"> The LC Compression Framework </a> from Texas State University.
 
@@ -546,5 +561,9 @@ systems that employ parallelism and floating-point arithmetic.
 </body>
 	</html>
 
-	--->
-	
+--->
+
+
+
+
+
