--- a/index.html
+++ b/index.html
@@ -481,8 +481,13 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 
  <li>
   <a href="https://www.youtube.com/watch?v=Yt1A-vaWTck?"> Tensor Cores (also see blog)</a>
-		  
 
+<li<>  Faults: what they can do to networks;
+  <a href="https://dl.acm.org/doi/pdf/10.1145/3579371.3589105">    This is an ISCA 2023 paper on it.</a>
+   This <a href="https://arxiv.org/pdf/2410.11720"> is a forthcoming PPoPP'25 paper. </a>
+   It has a Zenodo repo also
+   <a href="https://zenodo.org/records/14218977"> HERE. </a>
+   
 		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/LC/"> The LC Compression Framework </a> from Texas State University.
 
 		<li> <a href = "https://github.com/damtharvey/pyblaz"> The PyBlaz Lossy Compressor </a> developed at the University of Utah.
