--- a/index.html
+++ b/index.html
@@ -482,6 +482,9 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
  <li>
   <a href="https://www.youtube.com/watch?v=Yt1A-vaWTck?"> Tensor Cores (also see blog)</a>
 
+ <li> <a href="https://arxiv.org/pdf/2406.04693"> Vectorization synthesis. </a> A nice convergence of
+   LLM-assisted code generation, guarded by formal verification.
+   
 <li<>  Faults: what they can do to networks;
   <a href="https://dl.acm.org/doi/pdf/10.1145/3579371.3589105">    This is an ISCA 2023 paper on it.</a>
    This <a href="https://arxiv.org/pdf/2410.11720"> is a forthcoming PPoPP'25 paper. </a>
