--- a/index.html
+++ b/index.html
@@ -462,6 +462,9 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 				
 			  </strong>
 
+			  <ul> <a href="https://d2l.ai/"> A comprehensive textbook </a> authored by Dr. Smola and team - with detailed
+				descriptions accompanied by Jupyter notebooks.
+				
 			  <ul>
 				<li> <a href = "https://github.com/damtharvey/reu2023">  A course </a> with embedded quizzes (and answers) by TM Harvey Dam, PhD student.
 
