--- a/index.html
+++ b/index.html
@@ -317,7 +317,10 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
   <tbody>
     <tr>
       <td>1/7</td>
-      <td>Overview</td>
+      <td>Overview. Lecture slides are
+		<a href="https://docs.google.com/presentation/d/1neYXjkY7quEbvgOIvS_UKn5dxHfTPMiMESv4XgIcDVE/edit#slide=id.g328a179e4d3_0_43">
+		  HERE. </a>
+	  </td>
     </tr>
     <tr>
       <td>1/9</td>
