--- a/index.html
+++ b/index.html
@@ -320,6 +320,8 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
       <td>Overview. Lecture slides are
 		<a href="https://docs.google.com/presentation/d/1neYXjkY7quEbvgOIvS_UKn5dxHfTPMiMESv4XgIcDVE/edit#slide=id.g328a179e4d3_0_43">
 		  HERE. </a>
+		Today's lecture video (will stale in a month) is
+		<a href="https://utah.zoom.us/rec/share/ziPCIlHqW5PgsoMp2I2ifbbcMWxxkDUyh9lrdMsnFgZhatPfbon-jEBnbeogCgoZ.awG7yyBXOEQcQTyL?startTime=1736284025000"> HERE. </a>
 	  </td>
     </tr>
     <tr>
