--- a/index.html
+++ b/index.html
@@ -326,7 +326,12 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
     </tr>
     <tr>
       <td>1/9</td>
-      <td>Present baby GPT in Python (used previously for UG training)</td>
+      <td> More into the course: Structure, details, slides
+		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> are HERE. </a>
+		Today's lecture video (will stale in a month) is
+        <a href="https://utah.zoom.us/rec/share/ziPCIlHqW5PgsoMp2I2ifbbcMWxxkDUyh9lrdMsnFgZhatPfbon-jEBnbeogCgoZ.awG7yyBXOEQcQTyL?startTime=1736284025000\
+"> YET TO BE RECORDED. THIS IS LEC-1 VIDEO. THIS WILL BE REPLACED. </a>
+	  </td>
     </tr>
     <tr>
       <th colspan="2">Week 2</th>
