--- a/index.html
+++ b/index.html
@@ -320,17 +320,17 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
       <td>Overview. Lecture slides are
 		<a href="https://docs.google.com/presentation/d/1neYXjkY7quEbvgOIvS_UKn5dxHfTPMiMESv4XgIcDVE/edit#slide=id.g328a179e4d3_0_43">
 		  HERE. </a>
-		Today's lecture video (will stale in a month) is
-		<a href="https://utah.zoom.us/rec/share/ziPCIlHqW5PgsoMp2I2ifbbcMWxxkDUyh9lrdMsnFgZhatPfbon-jEBnbeogCgoZ.awG7yyBXOEQcQTyL?startTime=1736284025000"> HERE. </a>
+		Video 
+<a href="https://utah.zoom.us/rec/share/ziPCIlHqW5PgsoMp2I2ifbbcMWxxkDUyh9lrdMsnFgZhatPfbon-jEBnbeogCgoZ.awG7yyBXOEQcQTyL?startTime=1736284025000"> Here. </a>
 	  </td>
     </tr>
     <tr>
       <td>1/9</td>
       <td> More into the course: Structure, details, slides
 		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> are HERE. </a>
-		Today's lecture video (will stale in a month) is
-        <a href="https://utah.zoom.us/rec/share/ziPCIlHqW5PgsoMp2I2ifbbcMWxxkDUyh9lrdMsnFgZhatPfbon-jEBnbeogCgoZ.awG7yyBXOEQcQTyL?startTime=1736284025000\
-"> YET TO BE RECORDED. THIS IS LEC-1 VIDEO. THIS WILL BE REPLACED. </a>
+		Video
+		<a href="https://utah.zoom.us/rec/share/013cDdTrQlviEs1NoVGxzShDlAC_WDnQ5n4vBT7d3Cqr7dFc_fyct5yNSdZCNicx.HraRGwlh4CEHZLQW?startTime=1736456161000">
+		Here. </a>
 	  </td>
     </tr>
     <tr>
