--- a/index.html
+++ b/index.html
@@ -336,8 +336,12 @@ That finishes Jan!
     </tr>
     <tr>
       <td>1/9</td>
-      <td> More into the course: Structure, details, slides
+      <td> Simple 2-layer NNs (multi-layer perceptrons). Slides 
 		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> are HERE. </a>
+		HW-1 to modify the NN on
+		<a href="https://github.com/damtharvey/reu2023/blob/main/3_stochastic_gradient_descent.ipynb"
+		   this webpage </a>
+		to a classifier issued.
 		Video
 		<a href="https://utah.zoom.us/rec/share/013cDdTrQlviEs1NoVGxzShDlAC_WDnQ5n4vBT7d3Cqr7dFc_fyct5yNSdZCNicx.HraRGwlh4CEHZLQW?startTime=1736456161000">
 		Here. </a>
