--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@ That finishes Jan!
     <tr>
       <td>1/16</td>
       <td>
-		FP Error Estimation using Symbolic AD (Satire tool); FP Exception Detection
+		(1) Discuss MLPs and the FP lecture of 1/14. (2) FP
+		Error Estimation using Symbolic AD (Satire tool); FP Exception Detection
 		using Binary Analysis (GPU-FPX Tool).
 	  </td>
     </tr>
