--- a/index.html
+++ b/index.html
@@ -360,6 +360,9 @@ That finishes Jan!
 		(1) Discuss MLPs and the FP lecture of 1/14. (2) FP
 		Error Estimation using Symbolic AD (Satire tool); FP Exception Detection
 		using Binary Analysis (GPU-FPX Tool).
+   Slides 
+		<a href = "https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing">
+		  are HERE. </a>
 	  </td>
     </tr>
     <tr>
