--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ That finishes Jan!
       <th colspan="2">Week 2</th>
     </tr>
     <tr>
-      <td>1/14</td>
+      <td>1/14, Tue</td>
       <td> General lecture on Floating-Point Arithmetic: Precision, Error, Exceptions, Tools.</td>
    Slides 
 		<a href = "https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing">
