--- a/index.html
+++ b/index.html
@@ -321,11 +321,13 @@ That finishes Jan!
       <th>Topic</th>
     </tr>
   </thead>
-    <tr>
+  <tr>
+  <!------------------------------------------------------------------------------>	
       <th colspan="2">Week 1</th>
     </tr>  
   <tbody>
     <tr>
+  <!------------------------------------------------------------------------------>		  
       <td>1/7</td>
       <td>Overview. Lecture slides are
 		<a href="https://docs.google.com/presentation/d/1neYXjkY7quEbvgOIvS_UKn5dxHfTPMiMESv4XgIcDVE/edit#slide=id.g328a179e4d3_0_43">
@@ -342,30 +344,25 @@ That finishes Jan!
 		<a href="https://github.com/damtharvey/reu2023/blob/main/3_stochastic_gradient_descent.ipynb"
 		   this webpage </a>
 		to a classifier issued.
-		Video
-		<a href="https://utah.zoom.us/rec/share/013cDdTrQlviEs1NoVGxzShDlAC_WDnQ5n4vBT7d3Cqr7dFc_fyct5yNSdZCNicx.HraRGwlh4CEHZLQW?startTime=1736456161000">
-		Here. </a>
 	  </td>
-    </tr>
-    <tr>
+</tr>
+
+<!------------------------------------------------------------------------------>
+    <tr>   
       <th colspan="2">Week 2</th>
-    </tr>
-    <tr>
-      <td>1/14, Tue</td>
-      <td> General lecture on Floating-Point Arithmetic: Precision, Error, Exceptions, Tools.</td>
-   Slides 
-		<a href = "https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing">
-		  are HERE. </a>	  
+      <td>1/14</td>
+      <td>Slides for Lec-3
+	  <a href = "https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing"> are HERE. </a>
+	  </td>
     </tr>
     <tr>
       <td>1/16</td>
-      <td>
-		(1) Discuss MLPs and the FP lecture of 1/14. (2) FP
-		Error Estimation using Symbolic AD (Satire tool); FP Exception Detection
-		using Binary Analysis (GPU-FPX Tool).
+      <td> Slides for Lec-4
+		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> are HERE. </a>
 	  </td>
-    </tr>
-    <tr>
+    </tr>	  
+
+  <!------------------------------------------------------------------------------>  
       <th colspan="2">Week 3</th>
     </tr>
     <tr>
@@ -376,7 +373,8 @@ That finishes Jan!
       <td>1/23</td>
       <td> Begin lecturing on GPTs. What are their architectural elements? System elements? </td>
     </tr>
-    <tr>
+<tr>
+  <!------------------------------------------------------------------------------>  
       <th colspan="2">Week 4</th>
     </tr>	
     <tr>
