--- a/index.html
+++ b/index.html
@@ -347,18 +347,18 @@ That finishes Jan!
 	  </td>
 </tr>
 
-<!------------------------------------------------------------------------------>
-    <tr>   
       <th colspan="2">Week 2</th>
+<!------------------------------------------------------------------------------>
       <td>1/14</td>
       <td>Slides for Lec-3
 	  <a href = "https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing"> are HERE. </a>
 	  </td>
-    </tr>
+</tr>
+
     <tr>
       <td>1/16</td>
       <td> Slides for Lec-4
-		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> are HERE. </a>
+		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> WILL BE HERE (this is an older deck for now). </a>
 	  </td>
     </tr>	  
 
