--- a/index.html
+++ b/index.html
@@ -347,22 +347,42 @@ That finishes Jan!
 	  </td>
 </tr>
 
-      <th colspan="2">Week 2</th>
-<!------------------------------------------------------------------------------>
-      <td>1/14</td>
-      <td>Slides for Lec-3
+
 	  <a href = "https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing"> are HERE. </a>
+
+	  <tr>
+		<!------------------------------------------------------------------------------>
+      <th colspan="2">Week 2</th>
+      </tr>
+
+  <tbody>
+    <tr>
+  <!------------------------------------------------------------------------------>		  
+      <td>1/7</td>
+      <td>Overview. Lecture slides are
+		<a href="https://docs.google.com/presentation/d/1neYXjkY7quEbvgOIvS_UKn5dxHfTPMiMESv4XgIcDVE/edit#slide=id.g328a179e4d3_0_43">
+		  HERE. </a>
+		Video 
+<a href="https://utah.zoom.us/rec/share/ziPCIlHqW5PgsoMp2I2ifbbcMWxxkDUyh9lrdMsnFgZhatPfbon-jEBnbeogCgoZ.awG7yyBXOEQcQTyL?startTime=1736284025000"> Here. </a>
+	  </td>
+    </tr>
+    <tr>
+      <td>1/9</td>
+      <td> Simple 2-layer NNs (multi-layer perceptrons). Slides 
+		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> are HERE. </a>
+		HW-1 to modify the NN on
+		<a href="https://github.com/damtharvey/reu2023/blob/main/3_stochastic_gradient_descent.ipynb"
+		   this webpage </a>
+		to a classifier issued.
 	  </td>
 </tr>
 
-    <tr>
-      <td>1/16</td>
-      <td> Slides for Lec-4
-		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> WILL BE HERE (this is an older deck for now). </a>
-	  </td>
-    </tr>	  
 
-  <!------------------------------------------------------------------------------>  
+	  <a href = "https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing"> are HERE. </a>
+
+	  <tr>	  
+
+	  <!------------------------------------------------------------------------------>	  
       <th colspan="2">Week 3</th>
     </tr>
     <tr>
