--- a/index.html
+++ b/index.html
@@ -358,21 +358,17 @@ That finishes Jan!
   <tbody>
     <tr>
   <!------------------------------------------------------------------------------>		  
-      <td>1/7</td>
-      <td>Overview. Lecture slides are
-		<a href="https://docs.google.com/presentation/d/1neYXjkY7quEbvgOIvS_UKn5dxHfTPMiMESv4XgIcDVE/edit#slide=id.g328a179e4d3_0_43">
-		  HERE. </a>
-		Video 
-<a href="https://utah.zoom.us/rec/share/ziPCIlHqW5PgsoMp2I2ifbbcMWxxkDUyh9lrdMsnFgZhatPfbon-jEBnbeogCgoZ.awG7yyBXOEQcQTyL?startTime=1736284025000"> Here. </a>
+      <td>1/14</td>
+  <td>Motivating Floating-Point for ML Applications.
+Slides <a href="https://docs.google.com/presentation/d/1A95mVhuMjJnxNU472rtlVCwPAFTVUcWSZGQIbggZ00c/edit?usp=sharing"> are here. </a>
 	  </td>
     </tr>
     <tr>
-      <td>1/9</td>
-      <td> Simple 2-layer NNs (multi-layer perceptrons). Slides 
-		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> are HERE. </a>
-		HW-1 to modify the NN on
-		<a href="https://github.com/damtharvey/reu2023/blob/main/3_stochastic_gradient_descent.ipynb"
-		   this webpage </a>
+      <td>1/16</td>
+      <td> Simple 2-layer NNs
+		(multi-layer perceptrons)
+		Revisited. Slides 
+		<a href = "https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing"> WILL BE HERE. </a>
 		to a classifier issued.
 	  </td>
 </tr>
