--- a/index.html
+++ b/index.html
@@ -302,12 +302,13 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
         <section id="schedule">
             <h2>Class Schedule and Material (Done for Week-1; later ones TBD and not accurate as listed)</h2>
             <p>
-			  The class meets Tue and Thu from 2pm to 3:20pm in WEB 1230.
-			  Here is a more specific schedule.
-
-			  <!-- 1)  1/14: Tomorrow, I'll present FP and precision.
-2)  1/16: On Thu, I'll present FP error estimation using symbolic AD (work in the Satire tool) - another reinforcement of AD. 
-3) 1/21:  Next week Tue, I'll present GPUs and parallelism. I plan to read the layer code of some GPU implementations of layers. I went thru a few with Mark. They used cool warp-level primitives. We can use GPU layers as the selection criterion for the GPU concepts to imbibe and teach.
+	  The class meets Tue and Thu from 2pm to 3:20pm in WEB 1230.
+  Here is a more specific schedule.
+  <!-- 1)  1/14: Tomorrow, I'll present FP and precision.
+	   2)  1/16: On Thu, I'll present FP error estimation using symbolic AD (work in the Satire tool) - another reinforcement of AD. 
+	   
+	   3) 1/21:  Next week Tue, I'll present GPUs and parallelism.
+	   I plan to read the layer code of some GPU implementations of layers. I went thru a few with Mark. They used cool warp-level primitives. We can use GPU layers as the selection criterion for the GPU concepts to imbibe and teach.
 4) 1/23:  Next week Thu I plan to begin my GPT lecture 
 5) 1/28: We can do an Einsum lecture. We can show Attention (or others) coded using Einsum
 6) 1/30: Mark/Harvey : I feel we can write Tensor-core mat-mat using Einsum. It will be cool to try and do so.
