--- a/index.html
+++ b/index.html
@@ -386,13 +386,11 @@ That finishes Jan!
           </tr>
           <tr>
             <td>1/16</td>
-            <td> Simple 2-layer NNs
-              (multi-layer perceptrons)
-              Revisited. Slides
+            <td> Classifiers; Softmax; Meta's work on Scaling Softmax to million tokens; Universality; 
+              HW-1 info.
               <a
                 href="https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing">
-                WILL BE HERE. </a>
-              to a classifier issued.
+                ARE HERE. </a>
             </td>
           </tr>
 
