--- a/index.html
+++ b/index.html
@@ -389,16 +389,11 @@ That finishes Jan!
             <td> Classifiers; Softmax; Meta's work on Scaling Softmax to million tokens; Universality; 
               HW-1 info.
               <a
-                href="https://docs.google.com/presentation/d/19NxhVUsuAvk-fsxiejqOtZ9dJDVWOpESmfQ3FDEoNiM/edit?usp=sharing">
+                href="https://docs.google.com/presentation/d/1Znab80beAXiikObOjrNVCtge6cxhcNirESlqatBOEHg/edit?usp=drive_link">
                 ARE HERE. </a>
             </td>
           </tr>
-
-
-
-
           <tr>
-
             <!------------------------------------------------------------------------------>
             <th colspan="2">Week 3</th>
           </tr>
