--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
       </p>
     </section>
     <section id="schedule">
-      <h2>Class Schedule and Material (Done for Week-1; later ones TBD and not accurate as listed)</h2>
+      <h2>Class Schedule and Material (Done for Weeks 1, 2; later ones TBD and not accurate as listed)</h2>
       <p>
         The class meets Tue and Thu from 2pm to 3:20pm in WEB 1230.
         Here is a more specific schedule.
