--- a/index.html
+++ b/index.html
@@ -389,18 +389,28 @@ That finishes Jan!
             <td> Classifiers; Softmax; Meta's work on Scaling Softmax to million tokens; Universality; 
               HW-1 info.
               <a
-                href="https://docs.google.com/presentation/d/1Znab80beAXiikObOjrNVCtge6cxhcNirESlqatBOEHg/edit?usp=drive_link">
-                ARE HERE. </a>
+                href="https://docs.google.com/presentation/d/1Znab80beAXiikObOjrNVCtge6cxhcNirESlqatBOEHg/edit?usp=drive_link">        ARE HERE. </a>
             </td>
           </tr>
+		  
           <tr>
+			
             <!------------------------------------------------------------------------------>
             <th colspan="2">Week 3</th>
           </tr>
           <tr>
             <td>1/21</td>
-            <td> GPUs and Parallelism through the Lens of NN Layers (what CUDA and what FP do they use?) A Homework is
-              called for.</td>
+            <td> FP Reasoning: AutoGrad (ML) and FP Error Analysis (Rigorous).
+              Google Slides <a
+                href="https://docs.google.com/presentation/d/1hcaQmFoWSYN6-Ic5meYDiD6KXFeyfrNKbMpPg56geEY/edit?usp=sharing">
+                are here.
+			  </a>
+              PDF Slides <a
+                href="https://drive.google.com/file/d/16XsCgqG2e5ViO7GLdae3Wv_gdSkgFtne/view?usp=drive_link">
+                are here.
+			  </a>			  
+			  
+			
           </tr>
           <tr>
             <td>1/23</td>
