--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ That finishes Jan!
             <td> FP Reasoning: AutoGrad (ML) and FP Error Analysis (Rigorous).
               Google Slides <a
                 href="https://docs.google.com/presentation/d/1hcaQmFoWSYN6-Ic5meYDiD6KXFeyfrNKbMpPg56geEY/edit?usp=sharing">
-                are here.
+                are here. 
 			  </a>
               PDF Slides <a
                 href="https://drive.google.com/file/d/16XsCgqG2e5ViO7GLdae3Wv_gdSkgFtne/view?usp=drive_link">
@@ -414,7 +414,12 @@ That finishes Jan!
           </tr>
           <tr>
             <td>1/23</td>
-            <td> Begin lecturing on GPTs. What are their architectural elements? System elements? </td>
+			<td> Begin lecturing on GPTs.
+              Google Slides <a
+                href="https://docs.google.com/presentation/d/1GzR17IcW-w9T1cKmXipBZod39M1shoSbPGMnSpqB4EQ/edit?usp=sharing">
+                are here. 
+			  </a>
+			</td>
           </tr>
           <tr>
             <!------------------------------------------------------------------------------>
