--- a/index.html
+++ b/index.html
@@ -427,8 +427,11 @@ That finishes Jan!
           </tr>
           <tr>
             <td>1/28</td>
-            <td> Awesome Einsums: The Einstein Summation Notation: How it condenses many concepts clearly; can it
-              also help write down Tensor-Core Mat-Mat?
+			<td>
+			  Slides <a
+          href="https://docs.google.com/presentation/d/1lnMCNIPxgdOR97_LtKtamwbOzf7RXNgxGlH2qrr6aOQ/edit?usp=sharing">
+          are here. </a>
+			  Attention intuitions, coding, HW-2
             </td>
           </tr>
           <tr>
