slides for lec8

--- a/index.html
+++ b/index.html
@@ -436,7 +436,10 @@ That finishes Jan!
           </tr>
           <tr>
             <td>1/30</td>
-            <td> More GPTs. A Homework is called for.
+            <td> More GPTs.
+			  Slides <a
+					   href="https://docs.google.com/presentation/d/1UGznbXsorFgixv3AZtosQOLBSVCJnrEgHJvPKWCesWg/edit?usp=sharing">"
+          are here. </a>
             </td>
           </tr>
           <tr>
