--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ That finishes Jan!
             <td>1/30</td>
             <td> More GPTs.
 			  Slides <a
-					   href="https://docs.google.com/presentation/d/1UGznbXsorFgixv3AZtosQOLBSVCJnrEgHJvPKWCesWg/edit?usp=sharing">"
+			   href="https://docs.google.com/presentation/d/1UGznbXsorFgixv3AZtosQOLBSVCJnrEgHJvPKWCesWg/edit?usp=sharing">
           are here. </a>
             </td>
           </tr>
@@ -447,7 +447,9 @@ That finishes Jan!
           </tr>
           <tr>
             <td>2/4</td>
-            <td>Student presentations (at least 4)</td>
+            <td>
+			  Slides <a                                                                                                              			href="https://docs.google.com/presentation/d/12BKix0fn8b9i3Xa3LtezvQZuzUrcTM3ewpdWBqUvQWI/edit?usp=sharing">																																	  
+          are here. </a> 
           </tr>
           <tr>
             <td>2/6</td>
