--- a/index.html
+++ b/index.html
@@ -453,14 +453,18 @@ That finishes Jan!
           </tr>
           <tr>
             <td>2/6</td>
-            <td>Student presentations (at least 4)</td>
+            <td>Jack Dongarra Talk (SCI DLS)
+			  <a href="https://www.sci.utah.edu/the-institute/news/841-dsci-dongarra.html"> Abstract is here </a>
+			</td>
           </tr>
           <tr>
             <th colspan="2">Week 6</th>
           </tr>
           <tr>
             <td>2/11</td>
-            <td>Project option discussions</td>
+            <td>Student Presentations + Basic GPU Programming (GG)</td>
+			Slides <a href="https://docs.google.com/presentation/d/16pmMoQ8fLeSJoAPTthL5lmPzxymIY2F-/edit?usp=sharing&ouid=111643982767838026135&rtpof=true&sd=true">
+          are here. </a> 			
           </tr>
           <tr>
             <td>2/13</td>
