--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@ That finishes Jan!
           </tr>
           <tr>
             <td>2/11</td>
-            <td>Student Presentations + Basic GPU Programming (GG)</td>
-			Slides <a href="https://docs.google.com/presentation/d/16pmMoQ8fLeSJoAPTthL5lmPzxymIY2F-/edit?usp=sharing&ouid=111643982767838026135&rtpof=true&sd=true">
-          are here. </a> 			
+            <td>Student Presentations + Basic GPU Programming (GG).
+			  Slides <a href="https://docs.google.com/presentation/d/16pmMoQ8fLeSJoAPTthL5lmPzxymIY2F-/edit?usp=sharing&ouid=111643982767838026135&rtpof=true&sd=true"> are here. </a>
+				</td>
           </tr>
           <tr>
             <td>2/13</td>
