index of parfloat

--- a/index.html
+++ b/index.html
@@ -479,6 +479,8 @@ That finishes Jan!
           </tr>
           <tr>
             <td>2/20</td>
+	<td>		Slides <a href="https://docs.google.com/presentation/d/16pmMoQ8fLeSJoAPTthL5lmPzxymIY2F\
+-/edit?usp=sharing&ouid=111643982767838026135&rtpof=true&sd=true"> are here. </a> </td>
             <td>Student presentations (at least 4)</td>
           </tr>
           <tr>
