--- a/index.html
+++ b/index.html
@@ -479,8 +479,9 @@ That finishes Jan!
           </tr>
           <tr>
             <td>2/20</td>
-	<td>		Slides <a href="https://docs.google.com/presentation/d/16pmMoQ8fLeSJoAPTthL5lmPzxymIY2F\
--/edit?usp=sharing&ouid=111643982767838026135&rtpof=true&sd=true"> are here. </a> </td>
+			<td>
+			  Slides <a href="https://docs.google.com/presentation/d/14Ioek_4tZUPAGFU6yj-tpamKrWBm1to2nbb-1kNoxOo/edit#slide=id.g337ffc783ee_0_176">"
+				are here. </a> </td>
           </tr>
           <tr>
             <th colspan="2">Week 8</th>
