--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ That finishes Jan!
           <tr>
             <td>2/20</td>
 			<td>
-			  Slides <a href="https://docs.google.com/presentation/d/14Ioek_4tZUPAGFU6yj-tpamKrWBm1to2nbb-1kNoxOo/edit#slide=id.g337ffc783ee_0_176">"
+			  Slides <a href="https://docs.google.com/presentation/d/14Ioek_4tZUPAGFU6yj-tpamKrWBm1to2nbb-1kNoxOo/edit#slide=id.g337ffc783ee_0_176">
 				are here. </a> </td>
           </tr>
           <tr>
@@ -498,8 +498,10 @@ That finishes Jan!
             <th colspan="2">Week 9</th>
           </tr>
           <tr>
-            <td>3/3</td>
-            <td>Final tie-together lecture</td>
+            <td>3/4</td>
+			<td>
+			  Slides <a href="https://docs.google.com/presentation/d/1ZMAldOFnRGtEQBOE80OPET0f7eIfqadooyT9Q_p3Fuk/edit?usp=sharing">
+				are here. </a> </td>
           </tr>
           <tr>
             <td>3/5</td>
